--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,13 +1,14 @@
 @charset "UTF-8";
 
-.js-device {
+.only-pc,
+.only-sp {
   display: none;
 }
 
-body.isPc .only-pc.js-device {
+body.isPc .only-pc {
   display: block;
 }
 
-body.isSp .only-sp.js-device {
+body.isSp .only-sp {
   display: block;
 }
